--- a/mxsnapshot.ui
+++ b/mxsnapshot.ui
@@ -17,11 +17,18 @@
    <item>
     <widget class="QStackedWidget" name="stackedWidget">
      <property name="currentIndex">
-      <number>2</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="selectionPage">
       <layout class="QGridLayout" name="gridLayout_2">
-       <item row="0" column="0" colspan="3">
+       <item row="10" column="0">
+        <widget class="QLabel" name="labelLocation">
+         <property name="text">
+          <string>Snapshot location:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0" colspan="6">
         <widget class="QLabel" name="labelIntro">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -37,7 +44,7 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="0" colspan="3">
+       <item row="1" column="0" colspan="6">
         <widget class="QLabel" name="labelCurrentSpace">
          <property name="text">
           <string>Used space on / (root) and /home partitions:</string>
@@ -47,20 +54,7 @@
          </property>
         </widget>
        </item>
-       <item row="13" column="1">
-        <spacer name="verticalSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>0</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="5" column="0" colspan="3">
+       <item row="5" column="0" colspan="6">
         <widget class="QLabel" name="labelDiskSpaceHelp">
          <property name="text">
           <string/>
@@ -70,31 +64,14 @@
          </property>
         </widget>
        </item>
-       <item row="7" column="0" colspan="3">
+       <item row="7" column="0" colspan="6">
         <widget class="Line" name="line_4">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
         </widget>
        </item>
-       <item row="10" column="2">
-        <widget class="QPushButton" name="buttonSelectSnapshot">
-         <property name="text">
-          <string>Select a different snapshot directory</string>
-         </property>
-        </widget>
-       </item>
-       <item row="10" column="0" colspan="2">
-        <widget class="QLabel" name="labelSnapshot">
-         <property name="text">
-          <string/>
-         </property>
-         <property name="wordWrap">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="0" colspan="3">
+       <item row="2" column="0" colspan="6">
         <widget class="QFrame" name="frame_2">
          <property name="frameShape">
           <enum>QFrame::Box</enum>
@@ -171,6 +148,54 @@ color: rgb(0, 0, 0);</string>
           </item>
          </layout>
         </widget>
+       </item>
+       <item row="13" column="0">
+        <widget class="QLabel" name="labelIsoName">
+         <property name="text">
+          <string>Snapshot name:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="11" column="3">
+        <widget class="QPushButton" name="buttonSelectSnapshot">
+         <property name="text">
+          <string>Select a different snapshot directory</string>
+         </property>
+        </widget>
+       </item>
+       <item row="11" column="0" colspan="3">
+        <widget class="QLabel" name="labelSnapshotDir">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(255, 255, 205);
+border-color: rgb(0, 0, 0);
+color: rgb(0, 0, 0);</string>
+         </property>
+         <property name="frameShape">
+          <enum>QFrame::Box</enum>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="wordWrap">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="16" column="0" colspan="6">
+        <spacer name="verticalSpacer">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>0</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="14" column="0" colspan="3">
+        <widget class="QLineEdit" name="lineEditName"/>
        </item>
       </layout>
      </widget>
