--- a/mxsnapshot.ui
+++ b/mxsnapshot.ui
@@ -17,7 +17,7 @@
    <item>
     <widget class="QStackedWidget" name="stackedWidget">
      <property name="currentIndex">
-      <number>2</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="selectionPage">
       <layout class="QGridLayout" name="gridLayout_2">
@@ -643,7 +643,9 @@ color: rgb(0, 0, 0);</string>
         <string>Next</string>
        </property>
        <property name="icon">
-        <iconset theme="go-next"/>
+        <iconset theme="go-next">
+         <normaloff/>
+        </iconset>
        </property>
        <property name="shortcut">
         <string/>
@@ -668,7 +670,9 @@ color: rgb(0, 0, 0);</string>
         <string>Back</string>
        </property>
        <property name="icon">
-        <iconset theme="go-previous"/>
+        <iconset theme="go-previous">
+         <normaloff/>
+        </iconset>
        </property>
       </widget>
      </item>
