--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -208,30 +208,6 @@ color: rgb(0, 0, 0);</string>
      </widget>
      <widget class="QWidget" name="settingsPage">
       <layout class="QGridLayout" name="gridLayout_4">
-       <item row="8" column="1">
-        <widget class="QComboBox" name="cbCompression">
-         <item>
-          <property name="text">
-           <string>lz4</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>lzo</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>gzip</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>xz</string>
-          </property>
-         </item>
-        </widget>
-       </item>
        <item row="0" column="0" colspan="4">
         <widget class="QLabel" name="label_1">
          <property name="text">
@@ -242,14 +218,14 @@ color: rgb(0, 0, 0);</string>
          </property>
         </widget>
        </item>
-       <item row="9" column="0" colspan="4">
+       <item row="11" column="0" colspan="4">
         <widget class="Line" name="line">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
         </widget>
        </item>
-       <item row="12" column="0">
+       <item row="14" column="0">
         <spacer name="verticalSpacer_2">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -257,19 +233,6 @@ color: rgb(0, 0, 0);</string>
          <property name="sizeHint" stdset="0">
           <size>
            <width>20</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="8" column="2">
-        <spacer name="horizontalSpacer_2">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
            <height>20</height>
           </size>
          </property>
@@ -410,7 +373,7 @@ color: rgb(0, 0, 0);</string>
          </property>
         </spacer>
        </item>
-       <item row="11" column="0" colspan="4">
+       <item row="13" column="0" colspan="4">
         <widget class="QFrame" name="frame_3">
          <property name="frameShape">
           <enum>QFrame::StyledPanel</enum>
@@ -465,13 +428,6 @@ color: rgb(0, 0, 0);</string>
          </layout>
         </widget>
        </item>
-       <item row="8" column="0">
-        <widget class="QLabel" name="labelCompression">
-         <property name="text">
-          <string>ISO compression scheme:</string>
-         </property>
-        </widget>
-       </item>
        <item row="6" column="0">
         <widget class="QPushButton" name="buttonEditExclude">
          <property name="sizePolicy">
@@ -487,6 +443,79 @@ color: rgb(0, 0, 0);</string>
           <iconset theme="edit">
            <normaloff>.</normaloff>.</iconset>
          </property>
+        </widget>
+       </item>
+       <item row="8" column="0" colspan="4">
+        <widget class="QFrame" name="frame_4">
+         <property name="frameShape">
+          <enum>QFrame::StyledPanel</enum>
+         </property>
+         <property name="frameShadow">
+          <enum>QFrame::Plain</enum>
+         </property>
+         <property name="lineWidth">
+          <number>0</number>
+         </property>
+         <layout class="QGridLayout" name="gridLayout_5">
+          <item row="1" column="2">
+           <widget class="QComboBox" name="cbCompression">
+            <item>
+             <property name="text">
+              <string>lz4</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>lzo</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>gzip</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>xz</string>
+             </property>
+            </item>
+           </widget>
+          </item>
+          <item row="1" column="4">
+           <spacer name="horizontalSpacer_2">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item row="0" column="0">
+           <widget class="QLabel" name="label_3">
+            <property name="text">
+             <string>Options:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0" colspan="2">
+           <widget class="QLabel" name="labelCompression">
+            <property name="text">
+             <string>ISO compression scheme:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0" colspan="2">
+           <widget class="QCheckBox" name="checksums">
+            <property name="text">
+             <string>Calculate checksums</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </widget>
        </item>
       </layout>
