--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -160,7 +160,7 @@ color: rgb(0, 0, 0);</string>
         </widget>
        </item>
        <item row="11" column="3">
-        <widget class="QPushButton" name="buttonSelectSnapshot">
+        <widget class="QPushButton" name="btnSelectSnapshot">
          <property name="text">
           <string>Select a different snapshot directory</string>
          </property>
@@ -429,7 +429,7 @@ color: rgb(0, 0, 0);</string>
         </widget>
        </item>
        <item row="6" column="0">
-        <widget class="QPushButton" name="buttonEditExclude">
+        <widget class="QPushButton" name="btnEditExclude">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
            <horstretch>0</horstretch>
@@ -599,7 +599,7 @@ p, li { white-space: pre-wrap; }
       <number>5</number>
      </property>
      <item row="0" column="1">
-      <widget class="QPushButton" name="buttonHelp">
+      <widget class="QPushButton" name="btnHelp">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
          <horstretch>0</horstretch>
@@ -660,7 +660,7 @@ p, li { white-space: pre-wrap; }
       </spacer>
      </item>
      <item row="0" column="0">
-      <widget class="QPushButton" name="buttonAbout">
+      <widget class="QPushButton" name="btnAbout">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
          <horstretch>0</horstretch>
@@ -686,7 +686,7 @@ p, li { white-space: pre-wrap; }
       </widget>
      </item>
      <item row="0" column="10">
-      <widget class="QPushButton" name="buttonCancel">
+      <widget class="QPushButton" name="btnCancel">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
          <horstretch>0</horstretch>
@@ -712,7 +712,7 @@ p, li { white-space: pre-wrap; }
       </widget>
      </item>
      <item row="0" column="8">
-      <widget class="QPushButton" name="buttonNext">
+      <widget class="QPushButton" name="btnNext">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
          <horstretch>0</horstretch>
@@ -754,7 +754,7 @@ p, li { white-space: pre-wrap; }
       </spacer>
      </item>
      <item row="0" column="7">
-      <widget class="QPushButton" name="buttonBack">
+      <widget class="QPushButton" name="btnBack">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
          <horstretch>0</horstretch>
